--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "core-js": "^3.8.3",
     "element-ui": "^2.4.5",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "util": "^0.12.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vue-table-with-tree-grid": "^0.2.4",
