--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "element-ui": "^2.4.5",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "lodash": "^4.17.11",
     "util": "^0.12.4",
     "vue": "^2.6.14",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.1",
     "vue-table-with-tree-grid": "^0.2.4",
     "vuex": "^3.6.2"
