--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "core-js": "^3.8.3",
+    "echarts": "^4.1.0",
     "element-ui": "^2.4.5",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
